TODOs - v7 | Alignment fixes, loaders, export logs behaviour on dashboard, change youtube link (#110)
* TODOs - v7

* Integration module loader, increase height of dialog from dashboard, disable opening of child expenses in dialog

* Add todo, change workspace id positioning

* Add todo

--- a/src/app/shared/components/dashboard/dashboard-resolve-mapping-error-dialog/dashboard-resolve-mapping-error-dialog.component.scss
+++ b/src/app/shared/components/dashboard/dashboard-resolve-mapping-error-dialog/dashboard-resolve-mapping-error-dialog.component.scss
@@ -28,9 +28,9 @@
 
   &--table {
     overflow: scroll;
-    height: 750px;
+    height: 830px;
     @media only screen and (max-width: 1440px) {
-      height: 570px;
+      height: 650px;
     }
   }
 
